syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "/protodesmsg;procs";

// ProtoDes訊息資料
message ProtoDesMsg {
  uint32 MessageID = 1; // 訊息編號
  google.protobuf.Any Message = 2; // 訊息資料
}

// ProtoDes測試用訊息資料
message ProtoDesMsgTest {
  string Message = 1; // 訊息內容
}
